--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "message_board",
+  "name": "meeting_scheduler",
   "version": "0.1.0",
-  "description": "Internet Computer message board application",
+  "description": "Internet Computer meeting scheduler application",
   "dependencies": {
     "@dfinity/agent": "^0.21.4",
     "@dfinity/candid": "^0.21.4",
